[project]
name = "janus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "ccxt>=4.5.34",
    "ipython>=9.9.0",
    "nest-asyncio>=1.6.0",
    "pytest>=9.0.2",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "ruff>=0.14.13",
    "websockets>=16.0",
]
